<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vista.OrdenActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_car_shop"
        android:title="@string/tu_orden" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7.5dp">

        <TextView
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="2.5dp"
            android:gravity="end"
            android:text="@string/subtotal"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/costo_envio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/subtotal"
            android:layout_margin="2.5dp"
            android:gravity="end"
            android:text="@string/costo_envio"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/subtotal"
            android:layout_margin="2.5dp"
            android:gravity="start"
            android:text="@string/subtotal"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/costo_envio"
            android:layout_margin="2.5dp"
            android:gravity="start"
            android:text="@string/costo_envio"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/total"
                android:textColor="@color/background_dark"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/precio_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/number_0"
                android:textColor="@color/background_dark"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

        <Button
            android:id="@+id/confirmar_pedido"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:backgroundTint="#2FCC71"
            android:text="@string/confirmar_pedido"
            android:textColor="@color/background_light"
            android:textSize="15sp" />
    </RelativeLayout>
</LinearLayout>
