<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:drawme="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestauranteActivity$PlatoFragment">

    <RelativeLayout
        android:id="@+id/info_restaurante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/nombre_restaurante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2.5dp"
            android:text="@string/app_name"
            android:textColor="@color/background_dark"
            android:textSize="15sp"
            android:textStyle="italic"
            android:typeface="sans" />

        <ImageView
            android:id="@+id/logo_restaurante"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_below="@id/nombre_restaurante"
            android:layout_margin="2.5dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_launcher" />

        <RatingBar
            android:id="@+id/rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/logo_restaurante"
            android:layout_alignStart="@id/logo_restaurante"
            android:layout_below="@id/logo_restaurante"
            android:rating="5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/logo_restaurante"
            android:layout_alignTop="@id/logo_restaurante"
            android:layout_toEndOf="@id/logo_restaurante"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/metodos_de_pago"
                android:textColor="@color/secondary_text_light"
                android:textSize="12.5sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/pedido_minimo"
                android:textColor="@color/secondary_text_light"
                android:textSize="12.5sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/costo_envio"
                android:textColor="@color/secondary_text_light"
                android:textSize="12.5sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/tiempo_de_entrega"
                android:textColor="@color/secondary_text_light"
                android:textSize="12.5sp"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/logo_restaurante"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/logo_restaurante"
            android:orientation="vertical">

            <TextView
                android:id="@+id/metodos_pago"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/secondary_text_light"
                android:textSize="12.5sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/pedido_minimo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/pedido_minimo"
                android:textColor="@color/secondary_text_light"
                android:textSize="12.5sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/costo_envio"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/costo_envio"
                android:textColor="@color/secondary_text_light"
                android:textSize="12.5sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/tiempo_entrega"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/tiempo_de_entrega"
                android:textColor="@color/secondary_text_light"
                android:textSize="12.5sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/info_restaurante"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D6D6D6" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/ver_orden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/background_car_shop"
            android:gravity="center_vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:drawableStart="@drawable/ic_local_grocery_store_white_48dp"
                android:text="@string/ver_orden"
                android:textColor="@color/background_light" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/precio_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/app_name"
                android:textColor="@color/background_light"
                android:textSize="20sp" />

            <com.rafakob.drawme.DrawMeTextView
                android:id="@+id/total_items"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/number_0"
                android:textColor="@color/background_car_shop"
                drawme:dm_backColor="@color/background_light"
                drawme:dm_radius="100dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
