<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:drawme="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.unimagdalena.edu.co.domicilios.SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_hamburger" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_pizza" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/app_version"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/background_light"
        android:textSize="12.5sp" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:includeFontPadding="false"
        android:shadowColor="@color/glass25"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/app_name_lowercase"
        android:textColor="@color/background_light"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvAppName"
        android:layout_toEndOf="@+id/tvAppName"
        android:includeFontPadding="false"
        android:shadowColor="@color/glass25"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/com"
        android:textColor="@color/background_light"
        android:textSize="20sp" />

    <com.rafakob.drawme.DrawMeFrameLayout
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBottom="@+id/tvCom"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/tvAppName"
        app:dm_backColor="@color/background_light"
        app:dm_radius="100dp"
        app:dm_stroke="0dp"
        app:dm_strokeColor="@android:color/transparent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:padding="2.5dp"
            android:src="@drawable/ic_phone_white_48dp" />
    </com.rafakob.drawme.DrawMeFrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/tvCom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />
</RelativeLayout>
